--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~51.0.28",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.5",
